--- a/src/components/parallex/parallex.scss
+++ b/src/components/parallex/parallex.scss
@@ -16,7 +16,7 @@
   }
 
   .mountains {
-    background-image: url("./public/mountains.png");
+    background-image: url("public/mountains.png");
     width: 100%;
     height: 100%;
     background-size: cover;
@@ -42,7 +42,7 @@
   }
 
   .stars {
-    background-image: url("./stars.png");
+    background-image: url("/stars.png");
     width: 100%;
     height: 100%;
     background-size: cover;
@@ -53,3 +53,4 @@
     }
   }
 }
+
