--- a/src/components/parallex/parallex.scss
+++ b/src/components/parallex/parallex.scss
@@ -16,7 +16,7 @@
   }
 
   .mountains {
-    background-image: url("public/mountains.png");
+    background-image: url("/mountains.png");
     width: 100%;
     height: 100%;
     background-size: cover;
@@ -53,4 +53,5 @@
     }
   }
 }
+
 
