--- a/src/components/parallex/parallex.scss
+++ b/src/components/parallex/parallex.scss
@@ -12,6 +12,7 @@
     @include mobile {
       font-size: 59px;
       text-align: center;
+      font-size: -webkit-xxx-large;
     }
   }
 
@@ -53,5 +54,6 @@
     }
   }
 }
+
 
 
