--- a/src/components/about/about.scss
+++ b/src/components/about/about.scss
@@ -182,11 +182,15 @@
         .content-box {
           width: calc(100% - 40px);
           padding: 1.5rem;
+           .description {
+            font-size: 3.2vw;
+          }
         }  
       }
     }
   }
 }
+
 
 
 
